--- a/sources/app/src/main/res/values/colors.xml
+++ b/sources/app/src/main/res/values/colors.xml
@@ -7,4 +7,22 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="green388e3c">#388E3C</color>
+    <color name="greenc8e6c9">#C8E6C9</color>
+    <color name="green4caf50">#4CAF50</color>
+    <color name="orangeff9800">#ff9800</color>
+    <color name="dark212121">#212121</color>
+    <color name="dark757575">#757575</color>
+    <color name="darkbdbdbd">#BDBDBD</color>
+
+    <color name="darkPrimaryColor">#388E3C</color>
+    <color name="lightPrimaryColor">#C8E6C9</color>
+    <color name="primaryColor">#4CAF50</color>
+    <color name="accentColor">#ff9800</color>
+    <color name="textColor">#FFFFFF</color>
+    <color name="primaryTextColor">#212121</color>
+    <color name="secondaryTextColor">#757575</color>
+    <color name="diviverColor">#BDBDBD</color>
+
 </resources>
