--- a/sources/app/src/main/res/layout/app_bar_main.xml
+++ b/sources/app/src/main/res/layout/app_bar_main.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.FamilyTree2020.PopupOverlay" />
+            app:popupTheme="@style/Theme.FamilyTree2020.PopupOverlay"
+            />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -26,7 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@android:drawable/ic_dialog_email"
+        android:contentDescription="TODO" />
 
     <include layout="@layout/content_main" />
 
