--- a/sources/app/src/main/res/menu/drawer_menu.xml
+++ b/sources/app/src/main/res/menu/drawer_menu.xml
@@ -4,17 +4,17 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/button_nav_home"
+        <item android:id="@+id/button_nav_home"
             android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/button_nav_profile"
+            android:title="@string/menu_home"
+            />
+        <item android:id="@+id/button_nav_profile"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_profile" />
-        <item
-            android:id="@+id/button_nav_login"
+            android:title="@string/menu_profile"
+            />
+        <item android:id="@+id/button_nav_login"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_logout" />
+            android:title="@string/menu_logout"
+            />
     </group>
 </menu>
