--- a/sources/app/src/main/res/values/colors.xml
+++ b/sources/app/src/main/res/values/colors.xml
@@ -8,21 +8,30 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="green388e3c">#388E3C</color>
-    <color name="greenc8e6c9">#C8E6C9</color>
-    <color name="green4caf50">#4CAF50</color>
-    <color name="orangeff9800">#ff9800</color>
-    <color name="dark212121">#212121</color>
-    <color name="dark757575">#757575</color>
-    <color name="darkbdbdbd">#BDBDBD</color>
+<!--    <color name="green388e3c">#388E3C</color>-->
+<!--    <color name="greenc8e6c9">#C8E6C9</color>-->
+<!--    <color name="green4caf50">#4CAF50</color>-->
+<!--    <color name="orangeff9800">#ff9800</color>-->
+<!--    <color name="dark212121">#212121</color>-->
+<!--    <color name="dark757575">#757575</color>-->
+<!--    <color name="darkbdbdbd">#BDBDBD</color>-->
 
-    <color name="darkPrimaryColor">#388E3C</color>
-    <color name="lightPrimaryColor">#C8E6C9</color>
-    <color name="primaryColor">#4CAF50</color>
-    <color name="accentColor">#ff9800</color>
-    <color name="textColor">#FFFFFF</color>
-    <color name="primaryTextColor">#212121</color>
-    <color name="secondaryTextColor">#757575</color>
-    <color name="diviverColor">#BDBDBD</color>
+<!--    <color name="darkPrimaryColor">#0081CB</color>-->
+<!--    <color name="lightPrimaryColor">#69E2FF</color>-->
+<!--    <color name="primaryColor">#00B0FF</color>-->
+<!--    <color name="secondaryColor">#1DE9B6</color>-->
+<!--    <color name="darkSecondaryColor">#00B686</color>-->
+<!--    <color name="lightSecondaryColor">#6EFFE8</color>-->
+<!--    <color name="primaryTextColor">#E3F2FD</color>-->
+<!--    <color name="secondaryTextColor">#E0F2F1</color>-->
+
+    <color name="primary">#4CAF50</color>
+    <color name="primary_dark">#388E3C</color>
+    <color name="primary_light">#C8E6C9</color>
+    <color name="accent">#FFC107</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="icons">#FFFFFF</color>
+    <color name="divider">#BDBDBD</color>
 
 </resources>
