--- a/sources/app/src/main/res/values/dimens.xml
+++ b/sources/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="avt_height">85dp</dimen>
+    <dimen name="avt_width">85dp</dimen>
 </resources>
