--- a/sources/app/src/main/res/values/themes.xml
+++ b/sources/app/src/main/res/values/themes.xml
@@ -2,12 +2,12 @@
     <!-- Base application theme. -->
     <style name="Theme.FamilyTree2020" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryVariant">@color/primary_dark</item>
+        <item name="colorOnPrimary">@color/primary_light</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/accent</item>
+        <item name="colorSecondaryVariant">@color/accent</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
@@ -23,3 +23,11 @@
 
     <style name="Theme.FamilyTree2020.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
+
+<!--<item name="colorPrimary">@color/purple_500</item>-->
+<!--<item name="colorPrimaryVariant">@color/purple_700</item>-->
+<!--<item name="colorOnPrimary">@color/white</item>-->
+<!--    &lt;!&ndash; Secondary brand color. &ndash;&gt;-->
+<!--<item name="colorSecondary">@color/teal_200</item>-->
+<!--<item name="colorSecondaryVariant">@color/teal_700</item>-->
+<!--<item name="colorOnSecondary">@color/black</item>-->
