--- a/sources/app/src/main/res/layout/fragment_login.xml
+++ b/sources/app/src/main/res/layout/fragment_login.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/open_sans_semibold"
+        android:fontFamily="@font/roboto_medium"
         android:text="@string/login_upper"
         android:textColor="@color/secondary_text"
         android:textSize="30sp"
