--- a/sources/app/src/main/res/values/themes.xml
+++ b/sources/app/src/main/res/values/themes.xml
@@ -12,7 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="android:fontFamily">@font/open_sans</item>
+        <item name="android:fontFamily">@font/roboto</item>
     </style>
 
     <style name="Theme.FamilyTree2020.NoActionBar">
