--- a/sources/app/src/main/res/layout/activity_main.xml
+++ b/sources/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,14 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/primary"
-            android:id="@+id/toolbar"
+            android:background="@color/theme_text_1"
+            android:elevation="4dp"
             android:theme="@style/Theme.FamilyTree2020.AppBarOverlay"
             app:popupTheme="@style/Theme.FamilyTree2020.PopupOverlay"
-            android:elevation="4dp"
-            />
+            app:titleTextColor="@color/white" />
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
