--- a/sources/app/src/main/res/layout/fragment_login.xml
+++ b/sources/app/src/main/res/layout/fragment_login.xml
@@ -4,89 +4,129 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/theme_bg_1">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_medium"
-        android:text="@string/login_upper"
-        android:textColor="@color/secondary_text"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.069" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="80dp"
-        android:src="@drawable/icon_tree_family"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="210dp">
 
-    <EditText
-        android:id="@+id/input_username"
-        android:layout_width="280dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="40dp"
-        android:drawableStart="@drawable/ic_username"
-        android:ems="10"
-        android:hint="Tên đăng nhập"
-        android:inputType="textPersonName"
-        android:nestedScrollingEnabled="false"
-        android:singleLine="false"
-        android:textColor="#3C3F41"
-        android:textColorHighlight="#C8E6C9"
-        android:textColorHint="#BDBDBD"
-        android:textColorLink="#388E3C"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="160dp"
+                android:layout_height="160dp"
+                android:src="@drawable/ic_ui_circle_heart"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView"
+                app:layout_constraintEnd_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toStartOf="@+id/imageView"
+                app:layout_constraintTop_toTopOf="@+id/imageView" />
 
-    <EditText
-        android:id="@+id/input_password"
-        android:layout_width="280dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="20dp"
-        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
-        android:ems="10"
-        android:hint="Mật khẩu"
-        android:inputType="textPassword"
-        android:nestedScrollingEnabled="false"
-        android:singleLine="false"
-        android:textColor="#3C3F41"
-        android:textColorHighlight="#C8E6C9"
-        android:textColorHint="#BDBDBD"
-        android:textColorLink="#388E3C"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_username" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="85dp"
+                android:layout_height="85dp"
+                android:src="@drawable/icon_tree_family"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
-        android:backgroundTint="#FFC107"
-        android:drawableStart="@drawable/ic_baseline_lock_open_24"
-        android:text="@string/login_upper"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_password"
-        app:layout_constraintVertical_bias="0.161" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="200dp"
+                android:layout_height="65dp"
+                android:background="@drawable/ic_ui_button_violet"
+                android:drawableLeft="@drawable/ic_baseline_lock_open_24"
+                android:drawablePadding="5sp"
+                android:fontFamily="@font/roboto_medium"
+                android:padding="20sp"
+                android:text="@string/login_upper"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="302dp"
+                android:layout_height="150dp"
+                android:layout_marginTop="28dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.495"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                app:srcCompat="@drawable/ui_login_textbox" />
+
+            <EditText
+                android:id="@+id/input_username"
+                android:layout_width="280dp"
+                android:layout_height="46dp"
+                android:layout_marginTop="24dp"
+                android:drawableStart="@drawable/ic_username"
+                android:drawablePadding="10sp"
+                android:ems="10"
+                android:hint="Tên đăng nhập"
+                android:inputType="textPersonName"
+                android:nestedScrollingEnabled="false"
+                android:singleLine="false"
+                android:textColor="#3C3F41"
+                android:textColorHighlight="#C8E6C9"
+                android:textColorHint="#BDBDBD"
+                android:textColorLink="#388E3C"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="@+id/imageView3"
+                app:layout_constraintStart_toStartOf="@+id/imageView3"
+                app:layout_constraintTop_toTopOf="@+id/imageView3" />
+
+            <EditText
+                android:id="@+id/input_password"
+                android:layout_width="280dp"
+                android:layout_height="42dp"
+                android:layout_marginBottom="24dp"
+                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
+                android:drawablePadding="10sp"
+                android:ems="11"
+                android:hint="Mật khẩu"
+                android:inputType="textPassword"
+                android:nestedScrollingEnabled="false"
+                android:singleLine="false"
+                android:textColor="#3C3F41"
+                android:textColorHighlight="#C8E6C9"
+                android:textColorHint="#BDBDBD"
+                android:textColorLink="#388E3C"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+                app:layout_constraintEnd_toEndOf="@+id/imageView3"
+                app:layout_constraintStart_toStartOf="@+id/imageView3" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/roboto_bold"
+                android:text="@string/login_upper"
+                android:textColor="@color/theme_text_1"
+                android:textSize="30sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
