--- a/sources/app/src/main/res/layout/fragment_login.xml
+++ b/sources/app/src/main/res/layout/fragment_login.xml
@@ -24,7 +24,8 @@
                 app:layout_constraintBottom_toBottomOf="@+id/imageView"
                 app:layout_constraintEnd_toEndOf="@+id/imageView"
                 app:layout_constraintStart_toStartOf="@+id/imageView"
-                app:layout_constraintTop_toTopOf="@+id/imageView" />
+                app:layout_constraintTop_toTopOf="@+id/imageView"
+                android:contentDescription="@string/app_name" />
 
             <ImageView
                 android:id="@+id/imageView"
@@ -34,7 +35,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/app_name" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -43,10 +45,10 @@
 
             <Button
                 android:id="@+id/button"
-                android:layout_width="200dp"
-                android:layout_height="65dp"
-                android:background="@drawable/ic_ui_button_violet"
-                android:drawableLeft="@drawable/ic_baseline_lock_open_24"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ui_button_violet_control"
+                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                 android:drawablePadding="5sp"
                 android:fontFamily="@font/roboto_medium"
                 android:padding="20sp"
@@ -55,8 +57,10 @@
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView3"
+                app:layout_constraintVertical_bias="0.298" />
 
             <ImageView
                 android:id="@+id/imageView3"
@@ -67,7 +71,8 @@
                 app:layout_constraintHorizontal_bias="0.495"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
-                app:srcCompat="@drawable/ui_login_textbox" />
+                app:srcCompat="@drawable/ui_login_textbox"
+                android:contentDescription="@string/app_name" />
 
             <EditText
                 android:id="@+id/input_username"
@@ -88,7 +93,8 @@
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="@+id/imageView3"
                 app:layout_constraintStart_toStartOf="@+id/imageView3"
-                app:layout_constraintTop_toTopOf="@+id/imageView3" />
+                app:layout_constraintTop_toTopOf="@+id/imageView3"
+                android:autofillHints="" />
 
             <EditText
                 android:id="@+id/input_password"
@@ -109,7 +115,8 @@
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                 app:layout_constraintEnd_toEndOf="@+id/imageView3"
-                app:layout_constraintStart_toStartOf="@+id/imageView3" />
+                app:layout_constraintStart_toStartOf="@+id/imageView3"
+                android:autofillHints="" />
 
             <TextView
                 android:id="@+id/textView"
