--- a/sources/app/src/main/res/layout/nav_header.xml
+++ b/sources/app/src/main/res/layout/nav_header.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="@color/primary_dark"
+    android:background="@drawable/ui_bg_gradient_lunada"
     android:gravity="bottom"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
