--- a/sources/app/src/main/res/layout/activity_main.xml
+++ b/sources/app/src/main/res/layout/activity_main.xml
@@ -19,10 +19,15 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/theme_text_1"
+            android:background="@drawable/ui_bg_gradient_toolbar"
             android:elevation="4dp"
             android:theme="@style/Theme.FamilyTree2020.AppBarOverlay"
+            app:logo="@drawable/ic_icon_main"
             app:popupTheme="@style/Theme.FamilyTree2020.PopupOverlay"
+            app:subtitle="@string/app_copyright"
+            app:subtitleTextColor="@color/white"
+            app:title="@string/app_name"
+            app:titleMarginStart="30dp"
             app:titleTextColor="@color/white" />
         <FrameLayout
             android:id="@+id/fragment_container"
@@ -33,16 +38,14 @@
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content"
-        android:layout_gravity="start"
         android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/drawer_menu"
         app:itemIconTint="@color/theme_text_1"
         app:itemTextColor="@color/theme_text_1"
-
-        />
+        app:menu="@menu/drawer_menu" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
