--- a/sources/app/src/main/res/layout/nav_header.xml
+++ b/sources/app/src/main/res/layout/nav_header.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="176dp"
     android:background="@drawable/ui_bg_gradient_lunada"
     android:gravity="bottom"
+    android:orientation="vertical"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
@@ -12,16 +12,15 @@
         android:id="@+id/nav_header_avt"
         android:layout_width="@dimen/avt_width"
         android:layout_height="@dimen/avt_height"
-        android:src="@mipmap/ic_launcher"
-        />
+        android:src="@mipmap/ic_launcher" />
+
     <TextView
         android:id="@+id/nav_header_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
         android:text="@string/name_default"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/nav_header_email"
@@ -29,7 +28,6 @@
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
         android:text="@string/email_default"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 </LinearLayout>
