--- a/sources/app/src/main/res/layout/fragment_home.xml
+++ b/sources/app/src/main/res/layout/fragment_home.xml
@@ -26,13 +26,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="30dp"
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/button_information"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="30dp"
+            android:clickable="true"
+            app:backgroundTint="@color/lunada_violet"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_information"
+            android:contentDescription="@string/app_name" />
+
+        <TableLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:stretchColumns="*"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,45 +50,112 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="103dp">
+                android:layout_height="wrap_content">
 
                 <Button
                     android:id="@+id/button_profile"
+                    style="?attr/buttonBarButtonStyle"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:backgroundTint="@color/white"
                     android:drawableTop="@drawable/ic_menu_slideshow"
-                    android:text="Thong tin ca nhan"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="@string/string_button_profile"
                     android:textColor="@color/theme_text_1" />
 
                 <Button
                     android:id="@+id/button_drawTree"
+                    style="?attr/buttonBarButtonStyle"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:backgroundTint="@color/white"
                     android:drawableTop="@drawable/ic_menu_slideshow"
-                    android:text="Ve so do\npha he"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="@string/string_button_drawTree"
                     android:textColor="@color/theme_text_1" />
 
                 <Button
                     android:id="@+id/button_callLevel"
+                    style="?attr/buttonBarButtonStyle"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:backgroundTint="@color/white"
                     android:drawableTop="@drawable/ic_menu_slideshow"
-                    android:text="\nXung ho"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="@string/string_button_callLevel"
                     android:textColor="@color/theme_text_1" />
 
             </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/button_addMember"
+                    style="?attr/buttonBarButtonStyle"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:backgroundTint="@color/white"
+                    android:drawableTop="@drawable/ic_menu_slideshow"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="@string/string_button_add"
+                    android:textColor="@color/theme_text_1" />
+
+                <Button
+                    android:id="@+id/button_updateMember"
+                    style="?attr/buttonBarButtonStyle"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:backgroundTint="@color/white"
+                    android:drawableTop="@drawable/ic_menu_slideshow"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="@string/string_button_update"
+                    android:textColor="@color/theme_text_1" />
+
+                <Button
+                    android:id="@+id/button_delMember"
+                    style="?attr/buttonBarButtonStyle"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:backgroundTint="@color/white"
+                    android:drawableTop="@drawable/ic_menu_slideshow"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="@string/string_button_del"
+                    android:textColor="@color/theme_text_1" />
+
+            </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/button_changePassword"
+                    style="?attr/buttonBarButtonStyle"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:backgroundTint="@color/white"
+                    android:drawableTop="@drawable/ic_menu_slideshow"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="@string/string_button_password"
+                    android:textColor="@color/theme_text_1" />
+
+                <Button
+                    android:id="@+id/button_setting"
+                    style="?attr/buttonBarButtonStyle"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:backgroundTint="@color/white"
+                    android:drawableTop="@drawable/ic_menu_slideshow"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="@string/string_button_setting"
+                    android:textColor="@color/theme_text_1" />
+
+            </TableRow>
 
         </TableLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
