--- a/sources/app/src/main/res/drawable/ui_bg_gradient_cover_1.xml
+++ b/sources/app/src/main/res/drawable/ui_bg_gradient_cover_1.xml
@@ -6,8 +6,8 @@
             android:angle="-90"
             android:centerX="0.5"
             android:startColor="@color/primary_dark"
-            android:centerColor="@color/theme_green"
-            android:endColor="@color/white"
+            android:centerColor="@color/primary"
+            android:endColor="@color/theme_green"
             android:type="linear"
             />
     </shape>
