--- a/sources/app/src/main/res/values/dimens.xml
+++ b/sources/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="avt_height">85dp</dimen>
     <dimen name="avt_width">85dp</dimen>
+    <dimen name="appbar_header_height">176dp</dimen>
 </resources>
